# cbLib

./: .clang-format  .gitignore  .travis.yml  BuildVCCommand.vcmd  CMakeLists.txt  FormatCPP.bat  GLM.h  README.md  appveyor.yml  build.bat  build.txt  cbCamera.cpp  cbCamera.h  cbConsole.cpp  cbConsole.h  cbFont.cpp  cbFont.h  cbGame.cpp  cbGame.h  cbGame.sln  cbGame_solution_suppressions.cfg  cbImgui.cpp  cbImgui.h  cbModel.h  cbRenderGroup.h  imgui.cpp  imgui.h
cbGame/: cbGame.vcxproj
cbGame/include/: GLM.h  cbBasic.h  cbConsole.h  cbGame.h  cbImgui.h  cbInclude.h  cbShader.h
cbGame/shader/: noise.f  noise.v
cbGame/src/: cbConsole.cpp  cbFont.cpp  cbGame.cpp  cbImgui.cpp
cbLib/: CMakeLists.txt  cbBasic.h  cbDebug.h  cbInclude.h  cbLib.vcxproj.user.in  cbMemory.h  cbPlatform.cpp  cbPlatform.h  cbStack.h
cbPlatform/: FormatCPP.bat  cbPlatform.vcxproj
cbPlatform/include/: cbBasic.h  cbConsole.h  cbInclude.h  cbKeys.h  cbMemory.h  cbOpenGLRenderer.h  cbPlatform.h  cbRenderGroup.h
cbPlatform/src/: cbFont.cpp  cbPlatform.cpp
license/: assimp_license.txt  roboto_license.txt
res/: Segoe.fnt
shaders/: model.f  model.v  noise.f  pbr.f  pbr.v
